Se modifican los flujos de clientes no registrados

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
+        "@emailjs/browser": "^3.12.1",
         "body-parser": "^1.20.1",
         "dotenv": "^16.3.1",
+        "emailjs": "^4.0.3",
         "mime-types": "^2.1.35",
         "mongodb": "^4.12.1",
         "node-fetch": "^3.3.2",
+        "nodemailer": "^6.9.8",
         "polka": "^0.5.2",
         "twilio": "3.84.1"
     },
